--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <head>
         <title>Business Consulting Website</title>
-        <link rel="stylesheet" href="./styles/styles.css" />
-       <link rel="stylesheet" href="./styles/nav.css" />
+        <link rel="stylesheet" href="./styles.css" />
+       <link rel="stylesheet" href="./nav.css" />
     </head>
     <body> 
         <nav class="nav">
@@ -44,7 +44,7 @@
                         <input type="button" name="get started" value="Get Started" class="btn get-started">
                     </form>
                 </div>
-                <img src="./images/hero-image.png" alt="hero-image" />
+                <img src="./hero-image.png" alt="hero-image" />
             </section>
             <section id="company-logos" class="">
             </section>
@@ -62,11 +62,11 @@
                             Strategies & Personalized Approach to Ensure Financial Prosperity</p>
                     <button class="btn">Explore Services</button>
                 </div>
-                <img src="./images/exp-image.png" alt="experience-image" class="img-bg" />
+                <img src="./exp-image.png" alt="experience-image" class="img-bg" />
             </section>
 
             <section id="exp-section" class="section main-section">  
-                <img src="./images/service-image.png" alt="experience-image" class="img-bg" />
+                <img src="./service-image.png" alt="experience-image" class="img-bg" />
                 <div>
                     <span><small>OUR SERVICE</small> <hr></span>
                     <h1 class="exp-heading">Our Services Can Help You
@@ -82,6 +82,6 @@
         
         
         <!-- Load Js Scripts -->
-        <script src="./scripts/nav.js"></script>
+        <script src="./nav.js"></script>
     </body>
 </html>
